@startuml ERD_Clinic_Booking_System
left to right direction

skinparam linetype ortho
skinparam shadowing false
skinparam backgroundColor white
skinparam dpi 150
skinparam defaultFontName Arial
skinparam ArrowColor #000000
skinparam defaultBorderColor #F57C00
skinparam nodesep 100
skinparam ranksep 100

hide circle

' Legend:
' <<PK>> Primary Key
' <<FK>> Foreign Key
' <<U>>  Unique
' <<N>>  Nullable

entity "TaiKhoan" as TK #FFE0B2 {
  * id : bigint <<PK>>
  --
  email : varchar(255) <<U>>
  matKhau : varchar(255)
  refreshToken : text <<N>>
  vaiTro : varchar(50) <<N>>
  trangThaiTaiKhoan : int <<N>>
  gioiTinh : int <<N>>
  ngaySinh : date <<N>>
  diaChi : varchar(255) <<N>>
  anhDaiDien : varchar(255) <<N>>
  ngayTao : datetime <<N>>
  ngayCapNhat : datetime <<N>>
}

entity "ChuyenKhoa" as CK #FFE0B2 {
  * id : bigint <<PK>>
  --
  tenChuyenKhoa : varchar(120)
  anhChuyenKhoa : varchar(255) <<N>>
  moTaChuyenKhoa : text <<N>>
  thoiLuongKham : int
  icon : varchar(50) <<N>>
}

entity "BacSi" as BS #FFE0B2 {
  * id : bigint <<PK>>
  --
  hocViChucDanh : varchar(120) <<N>>
  tenBacSi : varchar(120)
  moTaNgan : varchar(255) <<N>>
  moTaChiTiet : text <<N>>
  giaKham : decimal(10,2) <<N>>
  taiKhoanId : bigint <<FK>> <<U>> <<N>>
  chuyenKhoaId : bigint <<FK>> <<N>>
}

entity "BenhNhan" as BN #FFE0B2 {
  * id : bigint <<PK>>
  --
  hoTen : varchar(120)
  soDienThoai : varchar(20) <<N>>
  emailLienHe : varchar(255) <<N>>
  taiKhoanId : bigint <<FK>> <<U>> <<N>>
}

entity "KhungGio" as KG #FFE0B2 {
  * id : bigint <<PK>>
  --
  gioBatDau : time
  gioKetThuc : time
}

entity "LichLamViecBacSi" as LLV #FFE0B2 {
  * id : bigint <<PK>>
  --
  ngayLamViec : date
  soBenhNhanHienTai : int <<N>>
  soBenhNhanToiDa : int <<N>>
  sanSang : int <<N>>
  bacSiId : bigint <<FK>> <<N>>
  khungGioId : bigint <<FK>> <<N>>
}

entity "HinhThucThanhToan" as HTTT #FFE0B2 {
  * id : bigint <<PK>>
  --
  tenHinhThuc : varchar(120)
  maLoai : varchar(20)
}

entity "DatLich" as DL #FFE0B2 {
  * id : bigint <<PK>>
  --
  ngayDat : date
  gioBatDau : time
  gioKetThuc : time
  lyDoKham : varchar(255) <<N>>
  giaKham : decimal(10,2) <<N>>
  trangThai : int <<N>>
  trangThaiThanhToan : int <<N>>
  bacSiId : bigint <<FK>> <<N>>
  benhNhanId : bigint <<FK>> <<N>>
  hinhThucThanhToanId : bigint <<FK>> <<N>>
  lichLamViecId : bigint <<FK>> <<N>>
  --
  UNIQUE(bacSiId, ngayDat, gioBatDau)
}

entity "GiaoDich" as GD #FFE0B2 {
  * id : bigint <<PK>>
  --
  datLichId : bigint <<FK>>
  loaiGiaoDich : varchar(20)
  soTien : decimal(10,2)
  maGiaoDichVNP : varchar(100) <<N>>
  maThamChieu : varchar(100) <<N>>
  trangThai : int
  ngayTao : datetime
  ngayCapNhat : datetime
}

entity "DonThuoc" as DT #FFE0B2 {
  * id : bigint <<PK>>
  --
  datLichId : bigint <<FK>> <<U>>
  ngayTao : datetime <<N>>
  chanDoan : text <<N>>
  ghiChu : text <<N>>
  tongTien : decimal(10,2) <<N>>
}

entity "ChiTietDonThuoc" as CTDT #FFE0B2 {
  * id : bigint <<PK>>
  --
  donThuocId : bigint <<FK>>
  tenThuoc : varchar(255)
  soLuong : int <<N>>
  donGia : decimal(10,2) <<N>>
  lieuDung : varchar(255) <<N>>
  ghiChu : varchar(255) <<N>>
}

entity "CauHoiThuongGap" as FAQ #FFE0B2 {
  * id : bigint <<PK>>
  --
  cauHoi : varchar(255) <<N>>
  traLoi : text <<N>>
  dangHoatDong : int <<N>>
}

TK   ||..o| BS
TK   ||..o| BN

CK   ||..o{ BS
BS   ||..o{ LLV
KG   ||..o{ LLV

BS   ||..o{ DL
BN   ||..o{ DL
HTTT ||..o{ DL
LLV  ||..o{ DL

DL   ||..o{ GD
DL   ||..o| DT
DT   ||..|{ CTDT

@enduml